--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-/* index.css or App.css */
 * {
   margin: 0;
   padding: 0;
@@ -12,7 +11,7 @@ html, body {
 }
 
 body {
-  background-color: #f5f5f5; /* Background color for the whole app */
+  background-color: #f5f5f5; 
 }
 
 #root {
