--- a/src/index.css
+++ b/src/index.css
@@ -11,12 +11,23 @@ html, body {
 }
 
 body {
-  background-color: #f5f5f5; 
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+  background-size: cover;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-position: center;
+  font-family: 'Arial', sans-serif;
 }
+
+
 
 #root {
   height: 100%;
   display: flex;
+  gap: 2rem;
   justify-content: center;
   align-items: center;
   margin: 0;
